:bug:Fixes error accessing params.country in dynamic route and adds handling of names with spaces

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 body {
   @apply bg-[#EEF4FF] text-[#001122];
